chore(spark): update build.sbt dependencies & sbt settings